Fix ignore of ubuntu rust.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,9 @@ rust:
 
 matrix:
     allow_failures:
-        - rust: nightly
-        - 1.28.0
+        - rust:
+            - nightly
+            - 1.28.0
     fast_finish: true
 
 cache: cargo
