--- a/2018/Cargo.toml
+++ b/2018/Cargo.toml
@@ -9,3 +9,10 @@ clap = "2.32"
 regex = "1.1.0"
 chrono = "0.4.6"
 itertools = "0.7.11"
+
+[dev-dependencies]
+bencher = "0.1.5"
+
+[[bench]]
+name = "days"
+harness = false
