Run benchmarks in travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,9 @@ cache: cargo
 # Custom directory, for the correct year
 before_script:
     - cd 2018
+
+# After success on stable, run benchmark
+after_succes:
+    - if [ "$TRAVIS_RUST_VERSION" == "stable" ]; then
+          cargo bench;
+      fi
