--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ before_script:
     - cd 2019
 
 # CMake build
-script:
-    - cmake .
-    - make
+script: cmake . && make
+
+addons:
+    apt:
+        packages:
+            - libboost-program-options-dev
