--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
     - cd 2019
 
 # CMake build
-script: cmake . && make
+script: cmake . && make && ./test_solutions
 
 addons:
     apt:
