--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,11 @@ before_script:
     - cd 2019
 
 # CMake build
-script: cmake . && make && ./test_solutions
+script: cmake . && make && make test
 
 addons:
     apt:
         packages:
+            - libboost-filesystem-dev
             - libboost-program-options-dev
             - libboost-test-dev
