--- a/2019/CMakeLists.txt
+++ b/2019/CMakeLists.txt
@@ -2,7 +2,6 @@ cmake_minimum_required(VERSION 3.12)
 
 project(aoc2019)
 
-find_package(Boost REQUIRED COMPONENTS program_options)
 find_package(GTest REQUIRED)
 
 add_library(AoCSolutions src/implementations.hpp src/implementations.cpp src/day01.cpp src/days.hpp)
@@ -10,7 +9,7 @@ target_compile_features(AoCSolutions PUBLIC cxx_std_17)
 
 add_executable(runner src/runner.cpp)
 target_compile_features(runner PUBLIC cxx_std_17)
-target_link_libraries(runner AoCSolutions Boost::program_options)
+target_link_libraries(runner AoCSolutions)
 
 add_executable(unit_tests tests/test_solutions.cpp)
 target_compile_features(unit_tests PUBLIC cxx_std_17)
