Implement day 13 part 2.

--- a/2019/CMakeLists.txt
+++ b/2019/CMakeLists.txt
@@ -4,9 +4,15 @@ project(aoc2019)
 
 find_package(GTest REQUIRED)
 
+option(ANIMATE_DAY13 "Animate the Arkanoid game in day 13." Off)
+
 file(GLOB DAYS_FILES src/day*.cpp)
 add_library(AoCSolutions src/implementations.cpp "${DAYS_FILES}" src/point.hpp src/utils.cpp src/utils.hpp)
 target_compile_features(AoCSolutions PUBLIC cxx_std_17)
+
+if (ANIMATE_DAY13)
+    target_compile_definitions(AoCSolutions ANIMATE_DAY13)
+endif ()
 
 add_executable(runner src/runner.cpp)
 target_compile_features(runner PUBLIC cxx_std_17)
