--- a/2020/Cargo.toml
+++ b/2020/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Bert Peters <bert@bertptrs.nl>"]
 edition = "2018"
 
 [dependencies]
+bytecount = "0.6"
 clap = "3.0.0-beta.2"
 itertools = "0.9"
 num-integer = "0.1"
