--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,24 @@
 dist: bionic
-language: rust
-rust:
-  - stable
-  - beta
-  - nightly
+language: python
+
+python:
+  - "3.9"
+  - "nightly"
 
 jobs:
   allow_failures:
-    - rust: nightly
+    - python: nightly
   fast_finish: true
 
-cache:
-  - cargo
-  - 2020/target
-
 # Custom directory, for the correct year
-before_script:
-  - cd 2020
+before_install:
+  - cd 2019
+  - python -m pip install --upgrade pip
+
+script: pytest
+
+cache:
+  directories:
+    - $HOME/.cache/pip
+before_cache:
+  - rm -f $HOME/.cache/pip/log/debug.log
