--- a/2021/Cargo.toml
+++ b/2021/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 
 [dependencies]
 clap = "3.0.0-beta.5"
+nom = "7"
 
 [profile.release]
 # Keep debug information in release for better flamegraphs
