--- a/2021/Cargo.toml
+++ b/2021/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 
 [dependencies]
-clap = "3.0.0-beta.5"
+clap = { version = "3.0.0-rc.0", features = ["derive"] }
 itertools = "0.10"
 nom = "7"
 
