--- a/2022/Cargo.toml
+++ b/2022/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.66"
 clap = { version = "4.0.19", features = ["derive"] }
+itertools = "0.10.5"
 nom = "7.1.1"
 
 [dev-dependencies]
