--- a/2022/Cargo.toml
+++ b/2022/Cargo.toml
@@ -11,6 +11,7 @@ anyhow = "1.0.66"
 clap = { version = "4.0.19", features = ["derive"] }
 itertools = "0.10.5"
 nom = "7.1.1"
+strength_reduce = "0.2.4"
 
 [dev-dependencies]
 criterion = "0.4.0"
