--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -9,6 +9,15 @@ edition = "2021"
 anyhow = "1.0.75"
 clap = { version = "4.4.8", features = ["derive"] }
 nom = "7.1.3"
+regex = "1.10.2"
 
 [dev-dependencies]
 criterion = "0.5.1"
+
+[profile.release]
+# Keep debug information in release for better flamegraphs
+debug = true
+
+[[bench]]
+name = "days"
+harness = false
