--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -10,6 +10,7 @@ aho-corasick = "1.1.2"
 anyhow = "1.0.75"
 clap = { version = "4.4.8", features = ["derive"] }
 nom = "7.1.3"
+num-integer = "0.1.45"
 
 [dev-dependencies]
 criterion = "0.5.1"
