--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 aho-corasick = "1.1.2"
 anyhow = "1.0.75"
 clap = { version = "4.4.8", features = ["derive"] }
+linked-hash-map = "0.5.6"
 nom = "7.1.3"
 num-integer = "0.1.45"
 
