--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -12,6 +12,7 @@ clap = { version = "4.4.8", features = ["derive"] }
 linked-hash-map = "0.5.6"
 nom = "7.1.3"
 num-integer = "0.1.45"
+rand = "0.8.5"
 
 [dev-dependencies]
 criterion = "0.5.1"
