--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -9,7 +9,9 @@ edition = "2021"
 aho-corasick = "1.1.2"
 anyhow = "1.0.75"
 clap = { version = "4.4.8", features = ["derive"] }
+linfa-linalg = "0.1.0"
 linked-hash-map = "0.5.6"
+ndarray = "0.15.6"
 nom = "7.1.3"
 num-integer = "0.1.45"
 rand = "0.8.5"
