--- a/2024/pyproject.toml
+++ b/2024/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "click>=8.1.7",
+    "networkx>=3.4.2",
     "numpy>=2.1.2",
 ]
 
